[tool.poetry]
name = "art-restoration-model"
version = "0.1.0"
description = ""
authors = ["Sebastian Jitaru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
torch = "^2.5.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
